--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,30 @@
-{% extends 'layout.html' %} {% block content %}
-<h1>News App</h1>
+{% extends 'base.html' %}
+
+<!--Block styles-->
+{% block styles %} {{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}" />
+{% endblock %}
+
+<!--Content block-->
+{% block content %}
+
+<div class="image">
+  <image
+    style="height: 70vh; width: 100%; position: relative"
+    src="{{ url_for('static', filename='images/image3.jpg') }}"
+    alt=""
+  />
+  <div id="overlay">
+    <h2 class="text-uppercase">
+      <span>For all your latest news</span> <br />"know your world"
+    </h2>
+  </div>
+</div>
 <div>
-    <ul>
-        {% for source in sources %}
-        <h3><a href="/source/{{ source.id }}">{{ source.name }}</a></h3>
-        {% endfor %}
-    </ul>
+  <ul>
+    {% for source in sources %}
+    <h3><a href="/source/{{ source.id }}">{{ source.name }}</a></h3>
+    {% endfor %}
+  </ul>
 </div>
 {% endblock content %}
