--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Balsamiq+Sans&display=swap');
+body {
+  font-family: 'Balsamiq Sans', cursive;
+}
 .top-nav {
   display: flex;
   justify-content: space-around;
   background-color: #dfe4de;
   color: #126f80;
-  align-items: center;
+  height: 25px;
 }
 .top-nav div p {
   font-family: 'Balsamiq Sans', cursive;
@@ -18,6 +21,29 @@ div h1 {
 }
 div h1 span {
   font-family: 'Alfa Slab One', cursive;
-  font-size: 40px;
+  font-size: 50px;
   color: #f95151;
+}
+.image {
+  width: 100%;
+  overflow-x: hidden;
+}
+#overlay {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  font-family: 'Balsamiq Sans', cursive;
+  width: 30%;
+  border: 2px solid #f95151;
+  background-color: rgba(223, 228, 222, 0.8);
+  text-align: center;
+  padding: 20px;
+}
+h2 span {
+  font-size: 30px;
+  font-family: 'Balsamiq Sans', cursive;
+  color: #126f80;
+}
+h2 {
+  color: #525e76;
 }
