--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,61 @@
-{% extends 'bootstrap/base.html'%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="" />
 
-<!--Linking CSS-->
-{% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css')}}" />
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-{% endblock %} {% block navbar %}
-<div class="top-nav">
-  <div>
-    <p>Welcome to NewsPoint</p>
-  </div>
-  <div>
-    <span><i class="fab fa-pinterest"></i></span>
-    <span><i class="fab fa-facebook"></i></span>
-    <span><i class="fab fa-instagram"></i></span>
-    <span><i class="fab fa-twitter"></i></span>
-  </div>
-</div>
-<nav class="text-center navbar-expand-lg navbar-light bg-light">
-  <div>
-    <h1><span>N</span>EWSPOINT</h1>
-  </div>
-</nav>
-{% endblock%} {% block content%} {% endblock %}
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/base.css')}}"
+    />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <title>{{ title }}</title>
+  </head>
+  <body>
+    <div class="navigation">
+      <div class="top-nav">
+        <div>
+          <p>Welcome to NewsPoint</p>
+        </div>
+        <div>
+          <span><i class="fab fa-pinterest"></i></span>
+          <span><i class="fab fa-facebook"></i></span>
+          <span><i class="fab fa-instagram"></i></span>
+          <span><i class="fab fa-twitter"></i></span>
+        </div>
+      </div>
+      <nav class="text-center navbar-expand-lg navbar-light bg-light">
+        <div>
+          <h1><span>N</span>EWSPOINT</h1>
+        </div>
+      </nav>
+    </div>
+    <div class="content">{% block content%} {% endblock %}</div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
