--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,16 +10,47 @@
     alt=""
   />
   <div id="overlay">
-    <h2 class="text-uppercase">
+    <h2 class="text-lower">
       <span>For all your latest news</span> <br />"know your world"
     </h2>
   </div>
 </div>
-<div>
-  <ul>
-    {% for source in sources %}
-    <h3><a href="/source/{{ source.id }}">{{ source.name }}</a></h3>
-    {% endfor %}
-  </ul>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-5">
+      <ul>
+        {% for source in sources %}
+        <h3>
+          <a class="text-upper" href="/source/{{ source.id }}"
+            >{{ source.name }}</a
+          >
+        </h3>
+        <p>{{ source.description }}</p>
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="col-md-7">
+      {% for article in everything %}
+      <div class="card">
+        <img
+          src="{{ article.image_path}}"
+          class="card-img-top"
+          alt="{{ article.title }}"
+        />
+        <div class="card-body">
+          <h5 class="card-title">{{ article.title }}</h5>
+          <p class="card-text">{{ article.content }}</p>
+          <a href="{{ article.url }}" class="btn btn-primary">Read More...</a>
+        </div>
+        <div class="card-footer">
+          <p>
+            This article was posted by {{ article.author }} on {{
+            article.publishedAt }}.
+          </p>
+        </div>
+      </div>
+      {% endfor%}
+    </div>
+  </div>
 </div>
 {% endblock content %}
