--- a/app/templates/source.html
+++ b/app/templates/source.html
@@ -4,8 +4,28 @@
 {% block content %}
 <div class="container">
   <div class="row">
+    {% for article in top_headlines %}
     <div class="col-md-6">
-      <h3>{{ source.name }}</h3>
+      <div class="card">
+        <img
+          src="{{ article.image_path}}"
+          class="card-img-top"
+          alt="{{ article.title }}"
+        />
+        <div class="card-body">
+          <h5 class="card-title">{{ article.title }}</h5>
+          <p class="card-text">{{ article.content|truncate(200) }}</p>
+          <a href="{{ article.url }}" class="btn btn-primary">Read More...</a>
+        </div>
+        <div class="card-footer">
+          <p>
+            This article was posted by {{ article.author }} on {{
+            article.publishedAt }}.
+          </p>
+        </div>
+      </div>
     </div>
+    {% endfor%}
   </div>
 </div>
+{% endblock%}
