create the error, spots and business html files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,11 +32,18 @@
           <span><i class="fab fa-twitter"></i></span>
         </div>
       </div>
-      <nav class="text-center navbar-expand-lg navbar-light bg-light">
+      <div class="text-center navbar-expand-lg navbar-light bg-light">
         <div>
           <h1><span>N</span>EWSPOINT</h1>
         </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/sports">Sports</a></li>
+            <li><a href="/business">Business</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
     <div class="content">{% block content%} {% endblock %}</div>
 
