--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,16 +18,20 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-5">
-      <ul>
-        {% for source in sources %}
-        <h3>
-          <a class="text-upper" href="/source/{{ source.id }}"
-            >{{ source.name }}</a
-          >
-        </h3>
-        <p>{{ source.description }}</p>
-        {% endfor %}
-      </ul>
+      {% for source in sources %}
+      <div class="card">
+        <div class="card-header">
+          <h3>
+            <a class="text-upper" href="/source/{{ source.id }}"
+              >{{ source.name }}</a
+            >
+          </h3>
+        </div>
+        <div class="card-body">
+          <p>{{ source.description }}</p>
+        </div>
+      </div>
+      {% endfor %}
     </div>
     <div class="col-md-7">
       {% for article in everything %}
