--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Balsamiq+Sans&display=swap');
 body {
   font-family: 'Balsamiq Sans', cursive;
+  background-color: #dfe4de;
 }
 .top-nav {
   display: flex;
@@ -18,6 +19,7 @@ body {
 div h1 {
   font-family: 'Balsamiq Sans', cursive;
   text-align: center;
+  padding-top: 5px;
 }
 div h1 span {
   font-family: 'Alfa Slab One', cursive;
@@ -59,4 +61,21 @@ h2 {
 }
 .navbar ul li a {
   color: #126f80;
+}
+.card h3 a {
+  color: #525e76;
+}
+.card {
+  margin: 15px;
+}
+
+/* Media Queries */
+@media only screen and (max-width: 768px) {
+  #overlay {
+    width: 80%;
+    padding: 5px;
+  }
+  #overlay h2 {
+    font-size: 30px;
+  }
 }
