--- a/app/templates/source.html
+++ b/app/templates/source.html
@@ -3,6 +3,7 @@
 <!--Content Block-->
 {% block content %}
 <div class="container">
+  <h3 class="text-info text-center mt-3">Top Articles</h3>
   <div class="row">
     {% for article in top_headlines %}
     <div class="col-md-6">
@@ -14,7 +15,7 @@
         />
         <div class="card-body">
           <h5 class="card-title">{{ article.title }}</h5>
-          <p class="card-text">{{ article.content|truncate(200) }}</p>
+          <p class="card-text">{{ article.content }}</p>
           <a href="{{ article.url }}" class="btn btn-primary">Read More...</a>
         </div>
         <div class="card-footer">
